fix heading 1 to center align

--- a/blackwoodops-website/src/app/app.component.scss
+++ b/blackwoodops-website/src/app/app.component.scss
@@ -14,6 +14,7 @@
 
 h1 {
     font-size: 5rem;
+    text-align: center;
 }
 
 h2 {
